Clean up Jigoshop Code
Clean up all of the old names and convert to fflcommerce.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,5 +2,8 @@ copy.src.files=false
 copy.src.on.open=false
 copy.src.target=/Applications/MAMP/htdocs/fflcommerce
 index.file=index.php
-run.as=LOCAL
-url=http://localhost/fflcommerce/
+remote.connection=FFLCommerce-61825a
+remote.directory=/demo/wp-content/plugins/fflcommerce
+remote.upload=ON_RUN
+run.as=REMOTE
+url=http://fflcommerce.com/demo/
