Update the variable naming issues

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,7 +3,7 @@ copy.src.on.open=false
 copy.src.target=/Applications/MAMP/htdocs/fflcommerce
 index.file=index.php
 remote.connection=FFLCommerce-61825a
-remote.directory=/demo/wp-content/plugins/fflcommerce
-remote.upload=ON_RUN
+remote.directory=/demo/wp-content/plugins/fflcommerce-master
+remote.upload=ON_SAVE
 run.as=REMOTE
 url=http://fflcommerce.com/demo/
